@@ -97,6 +97,7 @@ DE
 
 PF
 
+
 PH
 
 
@@ -106,8 +107,8 @@ DE
 DE
 
 
-
 PF
+
 
 RF
 ])
@@ -700,6 +701,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST
 
 
 
+
                           C U S T O M E R  C H A R G E  R E P O R T
 
 CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST
@@ -1046,6 +1048,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST    DISCT. %    DISCT
 
   6213   Z. HAMPTON            1       15792       $64.25         05%          $3.21         $61.04
   6213   Z. HAMPTON            1       19975       $98.75         05%          $4.94         $93.81
+
 
 
 
@@ -1416,6 +1419,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST    DISCT. %    DISCT
 
   6213   Z. HAMPTON            1       15792       $64.25         05%          $3.21         $61.04
                                1       19975       $98.75         05%          $4.94         $93.81
+
 
 
 
@@ -2132,6 +2136,7 @@ AT_DATA([reference], [                          D I S T R I C T   S A L E S   R 
                    20     $981.23       $98.12
                    21     $773.46       $77.35
                    22     $259.53       $25.95
+
 
 
 
@@ -2886,6 +2891,51 @@ DEPARTMENT NUMBER:  25 MAINTENANCE
     25 MAINTENANCE                   $1,744.00  10%     $102.04  10%     $210.54   9%      $13.25  17%     $1,418.17  10%
 
                                     $17,208.00 100%   $1,006.78 100%   $2,456.42 100%      $80.00 100%    $13,843.92 100%
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ])
 
 AT_CHECK([gcdiff reference report.txt], [0], [], [])
@@ -3734,6 +3784,7 @@ AT_DATA([reference], [                                                          
 
 
 
+
                                                             PAGE    2
 
                          STUDENT ADVISEMENT LIST
@@ -3757,6 +3808,7 @@ AT_DATA([reference], [                                                          
   Norseman, Ben04        27       Toronto           "
   Norseman, Ben05        27       Toronto           "
   Norseman, Ben06        27       Toronto           "
+
 
                                                             PAGE    3
 
@@ -3930,6 +3982,8 @@ AT_DATA([reference], [
 
 
 
+
+
          02             00060            5,439.80
 
                                                           5,439.80
@@ -3944,7 +3998,6 @@ AT_DATA([reference], [
 
                         00060            5,439.70
 
-                                                         10,879.40
 
 
 
@@ -3954,6 +4007,10 @@ AT_DATA([reference], [
 
 
 
+
+
+
+                                                         10,879.40
 
                                                                               10,879.40
 
@@ -3972,9 +4029,8 @@ AT_DATA([reference], [
 
 
 
-
-
                              -+* End of Page *+-      ************        *************       **************
+
 ])
 
 AT_CHECK([gcdiff reference report.txt], [0], [], [])
@@ -4073,12 +4129,14 @@ A        1st Detail
 
 
 
+
 HEADING SAVE-ITEM
 B        1st Detail
 B        2nd Detail
 B        3rd Detail 1
 B        3rd Detail 2
       FOOTING SAVE-ITEM
+
 
 
 
@@ -5113,6 +5171,7 @@ IN150222   20150222                          OR150226          020  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page    2
 Region:    MW
 Location:            1000071
@@ -5128,6 +5187,7 @@ IN150228   20150228                          OR150225          098  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000084        159.98
+
 
 
 
@@ -5233,6 +5293,7 @@ IN150227   20150227                          OR150223          079  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page    4
 Region:    MW
 Location:            1000291
@@ -5245,6 +5306,7 @@ IN150217   20150217                          OR150218          088  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000019         89.99
+
 
 
 
@@ -5353,6 +5415,7 @@ IN150223   20150223                          OR150210          063  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page    6
 Region:    MW
 Location:            1000451
@@ -5365,6 +5428,7 @@ IN150217   20150217                          OR150202          053  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000051         69.99
+
 
 
 
@@ -5473,6 +5537,7 @@ IN150224   20150224                          OR150201          036  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page    8
 Region:    MW
 Location:            1000831
@@ -5491,6 +5556,7 @@ IN150220   20150220                          OR150226          048  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000154        159.97
+
 
 
 
@@ -5593,6 +5659,7 @@ IN150223   20150223                          OR150227          069  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   10
 Region:    NE
 Location:            1000001
@@ -5605,6 +5672,7 @@ IN150210   20150210                          OR150217          060  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000098         39.99
+
 
 
 
@@ -5713,6 +5781,7 @@ IN150219   20150219                          OR150209          035  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   12
 Region:    NE
 Location:            1000431
@@ -5773,6 +5842,7 @@ IN150222   20150222                          OR150213          062  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   13
 Region:    NE
 Location:            1000451
@@ -5785,6 +5855,7 @@ IN150203   20150203                          OR150213          087  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000053         89.99
+
 
 
 
@@ -5893,6 +5964,7 @@ IN150221   20150221                          OR150222          034  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   15
 Region:    NE
 Location:            1000491
@@ -5905,6 +5977,7 @@ IN150217   20150217                          OR150210          037  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000007         19.99
+
 
 
 
@@ -6013,6 +6086,7 @@ IN150215   20150215                          OR150211          070  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   17
 Region:    NE
 Location:            1000631
@@ -6025,6 +6099,7 @@ IN150227   20150227                          OR150209          051  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000054          9.99
+
 
 
 
@@ -6133,6 +6208,7 @@ IN150206   20150206                          OR150220          045  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   19
 Region:    NE
 Location:            1000811
@@ -6148,6 +6224,7 @@ IN150228   20150228                          OR150222          075  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000103         99.98
+
 
 
 
@@ -6253,6 +6330,7 @@ IN150216   20150216                          OR150224          004  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   21
 Region:    NW
 Location:            1000001
@@ -6265,6 +6343,7 @@ IN150224   20150224                          OR150215          029  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000035         79.99
+
 
 
 
@@ -6373,6 +6452,7 @@ IN150228   20150228                          OR150209          023  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   23
 Region:    NW
 Location:            1000051
@@ -6433,6 +6513,7 @@ IN150220   20150220                          OR150221          050  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   24
 Region:    NW
 Location:            1000071
@@ -6445,6 +6526,7 @@ IN150202   20150202                          OR150223          014  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000048         59.99
+
 
 
 
@@ -6553,6 +6635,7 @@ IN150227   20150227                          OR150219          030  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   26
 Region:    NW
 Location:            1000201
@@ -6565,6 +6648,7 @@ IN150208   20150208                          OR150210          061  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000012         39.99
+
 
 
 
@@ -6673,6 +6757,7 @@ IN150214   20150214                          OR150210          044  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   28
 Region:    NW
 Location:            1000251
@@ -6685,6 +6770,7 @@ IN150212   20150212                          OR150204          059  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000060         39.99
+
 
 
 
@@ -6793,6 +6879,7 @@ IN150217   20150217                          OR150203          085  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   30
 Region:    NW
 Location:            1000411
@@ -6853,6 +6940,7 @@ IN150228   20150228                          OR150221          008  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   31
 Region:    NW
 Location:            1000491
@@ -6865,6 +6953,7 @@ IN150228   20150228                          OR150201          002  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000086         49.99
+
 
 
 
@@ -6973,6 +7062,7 @@ IN150227   20150227                          OR150224          097  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   33
 Region:    NW
 Location:            1000631
@@ -7033,6 +7123,7 @@ IN150224   20150224                          OR150218          024  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   34
 Region:    NW
 Location:            1000651
@@ -7045,6 +7136,7 @@ IN150206   20150206                          OR150225          099  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000043         59.99
+
 
 
 
@@ -7153,6 +7245,7 @@ IN150213   20150213                          OR150224          041  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   36
 Region:    NW
 Location:            1000691
@@ -7165,6 +7258,7 @@ IN150204   20150204                          OR150211          092  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000094         19.99
+
 
 
 
@@ -7273,6 +7367,7 @@ IN150227   20150227                          OR150217          081  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   38
 Region:    NW
 Location:            1000851
@@ -7285,6 +7380,7 @@ IN150208   20150208                          OR150203          091  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000066         69.99
+
 
 
 
@@ -7393,6 +7489,7 @@ IN150228   20150228                          OR150222          015  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   40
 Region:    NW
 Location:            1000891
@@ -7453,6 +7550,7 @@ IN150225   20150225                          OR150201          026  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   41
 Region:    SE
 Location:            1000001
@@ -7465,6 +7563,7 @@ IN150223   20150223                          OR150203          064  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000071          9.99
+
 
 
 
@@ -7573,6 +7672,7 @@ IN150212   20150212                          OR150209          066  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   43
 Region:    SE
 Location:            1000091
@@ -7633,6 +7733,7 @@ IN150226   20150226                          OR150219          038  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   44
 Region:    SE
 Location:            1000211
@@ -7645,6 +7746,7 @@ IN150206   20150206                          OR150221          089  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000045          9.99
+
 
 
 
@@ -7753,6 +7855,7 @@ IN150212   20150212                          OR150208          012  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   46
 Region:    SE
 Location:            1000431
@@ -7813,6 +7916,7 @@ IN150225   20150225                          OR150220          040  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   47
 Region:    SE
 Location:            1000451
@@ -7825,6 +7929,7 @@ IN150214   20150214                          OR150204          022  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000047         39.99
+
 
 
 
@@ -7933,6 +8038,7 @@ IN150211   20150211                          OR150213          025  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   49
 Region:    SE
 Location:            1000491
@@ -7945,6 +8051,7 @@ IN150202   20150202                          OR150202          013  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000078         19.99
+
 
 
 
@@ -8053,6 +8160,7 @@ IN150224   20150224                          OR150210          039  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   51
 Region:    SE
 Location:            1000631
@@ -8065,6 +8173,7 @@ IN150201   20150201                          OR150216          003  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000011         69.99
+
 
 
 
@@ -8173,6 +8282,7 @@ IN150220   20150220                          OR150214          032  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   53
 Region:    SE
 Location:            1000891
@@ -8233,6 +8343,7 @@ IN150226   20150226                          OR150229          068  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   54
 Region:    SW
 Location:            1000011
@@ -8245,6 +8356,7 @@ IN150202   20150202                          OR150206          000  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000059         39.99
+
 
 
 
@@ -8353,6 +8465,7 @@ IN150206   20150206                          OR150206          021  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   56
 Region:    SW
 Location:            1000091
@@ -8365,6 +8478,7 @@ IN150223   20150223                          OR150221          028  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000039         69.99
+
 
 
 
@@ -8473,6 +8587,7 @@ IN150225   20150225                          OR150203          052  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   58
 Region:    SW
 Location:            1000211
@@ -8488,6 +8603,7 @@ IN150208   20150208                          OR150215          007  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000102        119.98
+
 
 
 
@@ -8593,6 +8709,7 @@ IN150213   20150213                          OR150207          095  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   60
 Region:    SW
 Location:            1000401
@@ -8605,6 +8722,7 @@ IN150228   20150228                          OR150202          027  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000001         89.99
+
 
 
 
@@ -8713,6 +8831,7 @@ IN150210   20150210                          OR150220          073  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   62
 Region:    SW
 Location:            1000431
@@ -8773,6 +8892,7 @@ IN150220   20150220                          OR150227          006  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   63
 Region:    SW
 Location:            1000601
@@ -8785,6 +8905,7 @@ IN150206   20150206                          OR150201          011  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000084         79.99
+
 
 
 
@@ -8893,6 +9014,7 @@ IN150206   20150206                          OR150218          019  ITEM_NUMBER_
 
 
 
+
 Run:02/25/2015 153000                  NEXT PAGE ISSUE      Page   65
 Region:    SW
 Location:            1000651
@@ -8905,6 +9027,7 @@ IN150209   20150209                          OR150224          009  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000018         29.99
+
 
 
 
@@ -8971,6 +9094,7 @@ IN150222   20150222                          OR150213          058  ITEM_NUMBER_
 
 
                                                                     Branch Total:                   000000189        189.97
+
 
 
 
